examples/test/testpolicy15997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15997
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key2: value45
      key3: value30
      key10: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value12
          key48: value29
      podSelector:
        matchLabels:
          key33: value1
          key26: value28
